fix spacing issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -58,7 +58,7 @@ a {
   }
 }
 
-@media only screen and (max-width:1024px) {
+@media only screen and (max-width:1279px) {
   .mainWrapper {
     min-height: calc(100vh - 150px);
   }
